syntax = "proto3";

package player;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option go_package = "getswing.app/player-service/proto;playerpb";

service PlayerService {
  rpc GetPlayer (GetPlayerRequest) returns (GetPlayerResponse);
  rpc GetPlayerByPhone (GetPlayerByPhoneRequest) returns (GetPlayerResponse);
}

message Player {
  string id = 1;                 
  string first_name = 2;            
  string last_name = 3;              
  string username = 4;             
  string email = 5;                 
  string dialcode = 6;
  string phone_number = 7;
  string nationality = 8;
  string gender = 9;
  google.protobuf.StringValue profile_path = 10;
  string referral_code = 11;
  string experienced = 12;
  google.protobuf.BoolValue is_beta_tester = 13;
  google.protobuf.BoolValue is_onboarding = 14; 
  google.protobuf.BoolValue is_first_buy = 15;  
  google.protobuf.BoolValue is_default_username = 16;
  google.protobuf.BoolValue is_first_buy_golf_course = 17;
  google.protobuf.Timestamp dob = 18;       
  google.protobuf.Timestamp created_at = 19;
  google.protobuf.Timestamp updated_at = 20;
}

message GetPlayerRequest {
  string key = 1;
  string find_by = 2;
}

message GetPlayerByPhoneRequest {
 string phone_number = 1;
 string phone_country_code = 2;
}

message GetPlayerResponse {
  repeated Player players = 1;
}
